<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/main_background_color"
    android:visibility="visible"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/pullButton"
        android:layout_width="121dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/blue"
        android:text="@string/pull_btn_name"
        android:textColor="#fff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.815"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.671" />

    <Button
        android:id="@+id/pushButton"
        android:layout_width="121dp"
        android:layout_height="50dp"
        android:backgroundTint="#68E111"
        android:text="@string/push_btn_name"
        android:textColor="#000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/pullButton"
        app:layout_constraintHorizontal_bias="0.684"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.671" />

    <TextView
        android:id="@+id/chosenFolderLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chosen_local_folder_label"
        android:textColor="?attr/blurred_text_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.135"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.06" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Drive folder name:"
        android:textColor="?attr/blurred_text_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.104"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.457" />

    <TextView
        android:id="@+id/chosenFolder"
        android:layout_width="178dp"
        android:layout_height="173dp"
        android:minWidth="70dp"
        android:text="@string/chosen_folder"
        android:textColor="?attr/main_text_color"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/pushButton"
        app:layout_constraintEnd_toEndOf="@+id/chosenFolderLabel"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/chosenFolderLabel"
        app:layout_constraintTop_toBottomOf="@+id/chosenFolderLabel"
        app:layout_constraintVertical_bias="0.024" />

    <EditText
        android:id="@+id/driveFolderEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:importantForAutofill="no"
        android:textColor="?attr/main_text_color"
        android:textColorHint="#898484"
        android:hint="@string/edit_text_drive_folder_hint"
        android:backgroundTint="#A210C6"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/pushButton"
        app:layout_constraintEnd_toEndOf="@+id/chosenFolder"
        app:layout_constraintHorizontal_bias="0.268"
        app:layout_constraintStart_toStartOf="@+id/chosenFolder"
        app:layout_constraintTop_toBottomOf="@+id/chosenFolder"
        app:layout_constraintVertical_bias="0.693" />

    <Button
        android:id="@+id/chooseFolderBtn"
        android:layout_width="110dp"
        android:layout_height="48dp"
        android:backgroundTint="#F109B3"
        android:text="@string/choose_folder_btn_name"
        android:textColor="#fff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.904"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.084" />

    <Button
        android:id="@+id/signInButton"
        android:layout_width="110dp"
        android:layout_height="48dp"
        android:backgroundTint="#FFB300"
        android:text="@string/sign_in_button_value"
        android:textColor="#000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.904"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.206" />

    <Button
        android:id="@+id/logoutButton"
        android:layout_width="110dp"
        android:layout_height="48dp"
        android:backgroundTint="#00BCD4"
        android:text="@string/logout_button_value"
        android:textColor="#000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.904"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.328" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.828" />

    <TextView
        android:id="@+id/currentFetchOperationTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="?attr/main_text_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBar"
        app:layout_constraintVertical_bias="0.101" />

</androidx.constraintlayout.widget.ConstraintLayout>